--- a/.drone.yml
+++ b/.drone.yml
@@ -1,34 +1,33 @@
-matrix:
-  include:
-    - DOCKER_RUBY_VERSION: 2.2
-      RUBY_IMAGE_TAG: 2.2
-
-    - DOCKER_RUBY_VERSION: 1.9.3
-      RUBY_IMAGE_TAG: 1.9.3
-
 build:
-  image: abakpress/dind
-  privileged: true
-  volumes:
-    - /home/data/drone/images:/images
-    - /home/data/drone/gems:/bundle
-    - /home/data/drone/key_cache:/ssh_keys
-  environment:
-    - COMPOSE_FILE_EXT=drone
-    - POSTGRES_IMAGE_TAG=9.3
-  commands:
-    - wrapdocker docker -v
+  test:
+    image: abakpress/dind-testing
+    pull: true
+    privileged: true
+    volumes:
+      - /home/data/drone/images:/images
+      - /home/data/drone/gems:/bundle
+      - /home/data/drone/key_cache:/ssh_keys
+    environment:
+      - COMPOSE_FILE_EXT=drone
+      - RAILS_ENV=test
+      - RUBY_IMAGE_TAG=2.2-latest
+      - POSTGRES_IMAGE_TAG=9.3-latest
+    commands:
+      - wrapdocker docker -v
 
-    - docker load < /images/ssh-agent.tar || true
-    - (docker pull whilp/ssh-agent | grep 'Image is up to date') || docker save whilp/ssh-agent > /images/ssh-agent.tar
+      - fetch-images
+        --image whilp/ssh-agent
+        --image abakpress/ruby-app:$RUBY_IMAGE_TAG
+        --image abakpress/postgres-db:$POSTGRES_IMAGE_TAG
 
-    - docker load < /images/ruby_$RUBY_IMAGE_TAG.tar || true
-    - (docker pull abakpress/ruby:$RUBY_IMAGE_TAG | grep 'Image is up to date') || docker save abakpress/ruby:$RUBY_IMAGE_TAG > /images/ruby_$RUBY_IMAGE_TAG.tar
+      - dip ssh add -T -v /ssh_keys -k /ssh_keys/id_rsa
+      - dip provision
+      - dip rspec
 
-    - docker load < /images/postgres_$POSTGRES_IMAGE_TAG.tar || true
-    - (docker pull abakpress/postgres:$POSTGRES_IMAGE_TAG | grep 'Image is up to date') || docker save abakpress/postgres:$POSTGRES_IMAGE_TAG > /images/postgres_$POSTGRES_IMAGE_TAG.tar
-
-
-    - dip ssh add -T -v /ssh_keys -k /ssh_keys/id_rsa
-    - dip provision
-    - dip rspec
+  release:
+    image: abakpress/gem-publication:latest
+    pull: true
+    when:
+      event: push
+    commands:
+      - release-gem
