--- a/dip.yml
+++ b/dip.yml
@@ -2,8 +2,8 @@ version: '1'
 
 environment:
   DOCKER_RUBY_VERSION: 2.2
-  RUBY_IMAGE_TAG: 2.2
-  POSTGRES_IMAGE_TAG: 9.3
+  RUBY_IMAGE_TAG: 2.2-latest
+  POSTGRES_IMAGE_TAG: 9.3-latest
   COMPOSE_FILE_EXT: development
   RAILS_ENV: test
   APRESS_GEMS_CREDENTIALS: ""
