--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '2'
 
 services:
   app:
-    image: abakpress/ruby:$RUBY_IMAGE_TAG
+    image: abakpress/ruby-app:$RUBY_IMAGE_TAG
     environment:
       - BUNDLE_PATH=/bundle/$DOCKER_RUBY_VERSION
       - BUNDLE_CONFIG=/app/.bundle/config
@@ -15,6 +15,6 @@ services:
       - db
 
   db:
-    image: abakpress/postgres:$POSTGRES_IMAGE_TAG
+    image: abakpress/postgres-db:$POSTGRES_IMAGE_TAG
     environment:
       - POSTGRES_DB=docker
