--- a/dip.yml
+++ b/dip.yml
@@ -1,8 +1,8 @@
 version: '1'
 
 environment:
-  DOCKER_RUBY_VERSION: 2.2
-  RUBY_IMAGE_TAG: 2.2-latest
+  DOCKER_RUBY_VERSION: 2.3
+  RUBY_IMAGE_TAG: 2.3-latest
   POSTGRES_IMAGE_TAG: 9.6-latest
   COMPOSE_FILE_EXT: development
   RAILS_ENV: test
@@ -39,7 +39,7 @@ interaction:
 
   clean:
     service: app
-    command: rm -f Gemfile.lock gemfiles/*.gemfile.*
+    command: rm -rf Gemfile.lock gemfiles
 
 provision:
   - docker volume create --name bundler_data
